# micrograd

./: .gitignore  ASHRC  LICENSE  Makefile  README.md  micrograd.md  pyproject.toml
.devcontainer/: devcontainer.json
src/: engine.mojo  hello.mojo  main.mojo  run_test.mojo  test.mojo  tests.mojo  value.mojo
src/core/: defaultable.mojo  treeset.mojo
src/micrograd/: __init__.mojo  copy_move_list.mojo  numeric.mojo  numeric_float.mojo  rc.mojo  traits.mojo  value.mojo  value_old.mojo
src/micrograd/core/: comparable.mojo  optional.mojo  rbtree.mojo  rc.mojo
src/micrograd/gradable/: __init__.mojo  grad_float32.mojo  gradable.mojo
src/micrograd/wip/: hello.mojo
src/test/: __init__.mojo  test_gradable.mojo  test_numeric.mojo  test_rc.mojo  test_value.mojo  test_value_float32.mojo
test/micrograd/: test_value_float32.mojo
