[tool.poetry]
name = "micrograd-mojo"
version = "0.1.0"
description = "Attempting to follow Andrej's wonderful tutorial and implement in mojo lang"
authors = ["Thomas Gale <mail@thomasjamesgale.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
