[tool.poetry]
name = "micrograd"
version = "0.1.0"
description = "Attempting to follow Andrej's wonderful tutorial and implement in mojo lang (this poetry package is non-installed and is just for managaing the python deps)"
authors = ["Thomas Gale <mail@thomasjamesgale.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.9.0"
pillow = "^10.3.0"
torch = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
